Add map two - five variables for test_yourself.htm so users can acquire the data

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -83,6 +83,7 @@
       </div>
     </div>
   </section>
+
 <!-- Map One-->
   <section class="container">
     <div class="row">
@@ -115,7 +116,7 @@
             <div class="container" id="map_one"></div>
             <div class="text-center">
             <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
-            id="randomScenario" 
+            id="randomScenarioMapOne" 
             data-toggle="modal" 
             data-target="#map-1-scene-1">Random Scenario
             </button>
@@ -159,7 +160,7 @@
             <div class="container" id="map_two"></div>
            <div class="text-center">
             <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
-            id="randomScenario2" 
+            id="randomScenarioMapTwo" 
             data-toggle="modal" 
             data-target="#map-2-scene-1">Random Scenario</button>
             <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
@@ -171,6 +172,7 @@
       </div>
     </div>
 
+<!-- Map Three-->
      <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
@@ -201,7 +203,7 @@
             <div class="container" id="map_three"></div>
             <div class="text-center">
             <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
-            id="randomScenario3" 
+            id="randomScenarioMapThree" 
             data-toggle="modal" 
             data-target="#map-3-scene-1">Random Scenario</button>
             <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
@@ -213,6 +215,7 @@
       </div>
     </div>
 
+<!-- Map Four -->
 <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
@@ -243,7 +246,7 @@
             <div class="container" id="map_four"></div>
             <div class="text-center">
             <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
-            id="randomScenario4" 
+            id="randomScenarioMapFour" 
             data-toggle="modal" 
             data-target="#map-4-scene-1">Random Scenario</button>
            <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
@@ -255,6 +258,7 @@
       </div>
     </div>
 
+<!-- Map Five-->
     <div class="row">
       <div class="col-12 title-div">
       <div class="container heading-background heading-padding heading-margin">
@@ -285,7 +289,7 @@
             <div class="container" id="map_five"></div>
             <div class="text-center">
             <button class="btn btn-primary btn-lgt-blue form--button mt-2 btn-rounded" 
-            id="randomScenario5" 
+            id="randomScenarioMapFive" 
             data-toggle="modal" 
             data-target="#map-5-scene-1">Random Scenario</button>
             <button class="btn btn-danger btn-lgt-red form--button mt-2 btn-rounded" 
