Fix code alignment on all pages for ease of reading the code

--- a/help.html
+++ b/help.html
@@ -40,7 +40,7 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
           </li>
-           <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
           </li>
           <li class="nav-item">
@@ -54,31 +54,31 @@
     </nav>
   </header>
   <section class="container">
-      <div class="row">
+    <div class="row">
       <div class="col-12 title-div">
-      <div class="container heading-background heading-padding heading-margin-top">
-      <h1>Understanding the Dilemma Zone variables <i class="fas fa-info-circle"></i></h1>
-      <p class="head-text">When approaching a controlled intersection and the traffic signal changes to yellow, a driver of a vehicle has one of two choices;
-        firstly, they can continue through the traffic signals and intersection or, brake in order to stop before the light changes red at the stop line.</p>
-      <p class="head-text">A dilemma zone exists where a vehicle would not be able to safely pass through the
-        intersection nor stop before the stop line if a signal light were to turn yellow on approach.</p>
-      <p class="head-text">The risk involved to other drivers as well as the driver of the vehicle is significant in a dilemma zone situation. to date, no effective
-        calcuator is available online to estimate if a dilemma zone exists at a particular intersection. This help file will give an understanding of the variables
-        required and how the results can be evaluated.</p>
+        <div class="container heading-background heading-padding heading-margin-top">
+          <h1>Understanding the Dilemma Zone variables <i class="fas fa-info-circle"></i></h1>
+          <p class="head-text">When approaching a controlled intersection and the traffic signal changes to yellow, a driver of a vehicle has one of two choices;
+            firstly, they can continue through the traffic signals and intersection or, brake in order to stop before the light changes red at the stop line.</p>
+          <p class="head-text">A dilemma zone exists where a vehicle would not be able to safely pass through the
+            intersection nor stop before the stop line if a signal light were to turn yellow on approach.</p>
+          <p class="head-text">The risk involved to other drivers as well as the driver of the vehicle is significant in a dilemma zone situation. to date, no effective
+            calcuator is available online to estimate if a dilemma zone exists at a particular intersection. This help file will give an understanding of the variables
+            required and how the results can be evaluated.</p>
+        </div>
       </div>
-    </div>
     </div>
   </section>
   <!--First Set of Cards-->
   <section class="container">
     <div class="row">
       <div class="col-12 title-div">
-      <div class="container heading-background heading-padding heading-margin">
-        <h2>Velocity and signal phases</h2>
-        <p class="card-text">
-          The best methods to determine initial velocities and traffic light phases.
-        </p>
-      </div>
+        <div class="container heading-background heading-padding heading-margin">
+          <h2>Velocity and signal phases</h2>
+          <p class="card-text">
+            The best methods to determine initial velocities and traffic light phases.
+          </p>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -145,12 +145,12 @@
     <!-- Second Set of Cards-->
     <div class="row">
       <div class="col-12 title-div">
-      <div class="container heading-background heading-padding heading-margin">
-        <h2>Reaction Time, Friction and Intersection Size</h2>
-        <p class="card-text">
-          Here we discuss the best methods to determine the reaction time of a driver, the friction between the vehicle and the road and the size of an intersection.
-        </p>
-      </div>
+        <div class="container heading-background heading-padding heading-margin">
+          <h2>Reaction Time, Friction and Intersection Size</h2>
+          <p class="card-text">
+            Here we discuss the best methods to determine the reaction time of a driver, the friction between the vehicle and the road and the size of an intersection.
+          </p>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -170,7 +170,7 @@
             <p>There is no equation you can use to determine reaction time, other than trying it experimentally. We have designed a reaction time game that may
               help determine your reaction time or that of other people. See the <a href="game.html" class="underline" target="_blank">reaction time game</a>
               to run various estimates and averages for reaction times.</p>
-              <p>In order to work out stopping distance, we need to take into account the distance travelled before any action has taken place. To do this we 
+            <p>In order to work out stopping distance, we need to take into account the distance travelled before any action has taken place. To do this we
               calculate: \[dist_{reaction} = { velocity \cdot time_{reaction}}\]</p>
           </div>
         </div>
@@ -194,8 +194,8 @@
               Good road conditions and good tires on the vehicle could see a range for μ between 0.67 and 0.75. Icy conditions could see μ as low as 0.3. For
               more data you can check <a href="https://www.semanticscholar.org/paper/On-the-road-friction-recognition-based-on-the-Hui-Min/d164c2387684690754164580fa9eb16d0ec0eb9f/figure/0" class="underline" target="_blank">
                 here</a>.
-                \[μ\]</p>
-             </div>
+              \[μ\]</p>
+          </div>
         </div>
       </div>
     </div>
@@ -216,7 +216,7 @@
               engineering plans of the intersection. If these are available you can use the dilemma zone calculator to plot out the location of dilemma and option
               zones. Typically you'd measure the intersection in metres. However, our calculator can convert yards into metres for you.</p>
             <p>An intersection is measured from stop line to opposite stop line. Currently, the calculator is not geared for perpindicular roads.
-            \[dist_{intersection}\]</p>
+              \[dist_{intersection}\]</p>
           </div>
         </div>
       </div>
@@ -224,12 +224,12 @@
     <!--Third Set of Cards-->
     <div class="row">
       <div class="col-12 title-div">
-      <div class="container heading-background heading-padding heading-margin">
-        <h2>Length of vehicle</h2>
-        <p class="card-text">
-          Length of vehicles vary depending on make, model and even type. 
-        </p>
-      </div>
+        <div class="container heading-background heading-padding heading-margin">
+          <h2>Length of vehicle</h2>
+          <p class="card-text">
+            Length of vehicles vary depending on make, model and even type.
+          </p>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -256,12 +256,12 @@
     <!--Fourth Set of Cards-->
     <div class="row">
       <div class="col-12 title-div">
-      <div class="container heading-background heading-padding heading-margin">
-        <h2>Putting it all together</h2>
-        <p class="card-text">
-          When you have all your variables you can put them into our <a href="index.html" class="underline" target="_blank"> calculator</a> or work it out yourself with this equation.
-        </p>
-      </div>
+        <div class="container heading-background heading-padding heading-margin">
+          <h2>Putting it all together</h2>
+          <p class="card-text">
+            When you have all your variables you can put them into our <a href="index.html" class="underline" target="_blank"> calculator</a> or work it out yourself with this equation.
+          </p>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -277,10 +277,10 @@
         <div class="card shadow" id="card-help-text-final">
           <div class="card-body">
             <p>The final equation requires all the inputs for each variable.
-            \[dist_{final} =\] \[{ dist_{total} - dist_{intersection} - length}\]
-            \[dist_{stopping} = { velocity^2 \over 2 \; μ \; g}\]
-            \[zone =\] \[{dist_{final} - (dist_{stopping} + dist_{reaction})}\]
-            Where g = 9.81 ms<sup>-2</sup></p>
+              \[dist_{final} =\] \[{ dist_{total} - dist_{intersection} - length}\]
+              \[dist_{stopping} = { velocity^2 \over 2 \; μ \; g}\]
+              \[zone =\] \[{dist_{final} - (dist_{stopping} + dist_{reaction})}\]
+              Where g = 9.81 ms<sup>-2</sup></p>
             <p>If <em>zone</em> is negative, then a dilemma zone exists. If <em>zone</em> is positive, then an option zone exists.</p>
           </div>
         </div>
@@ -333,16 +333,10 @@
 
     <!-- Copyright and Facebook share-->
     <div class="container text-center">
-      <div 
-   class="fb-share-button" 
-   data-href="https://pauld0051.github.io/physics-code/index.html" 
-   data-layout="button" 
-   data-size="large">
-   <a target="_blank" 
-   href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
-   class="fb-xfbml-parse-ignore">Share</a></div>
+      <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
-    
+
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
       <a href="privacy.html" target="_blank">Privacy Policy</a><br>
