--- a/404.html
+++ b/404.html
@@ -14,11 +14,11 @@
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
   <title>Physics Code</title>
-<meta property="og:url"           content="https://pauld0051.github.io/physcis-code/index.html" />
-<meta property="og:type"          content="website" />
-<meta property="og:title"         content="Physics Code" />
-<meta property="og:description"   content="A free web resource for Physics students." />
-<meta property="og:image"         content="https://pauld0051.github.io/physcis-code/assets/images/logo-main.png" />
+  <meta property="og:url" content="https://pauld0051.github.io/physcis-code/index.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Physics Code" />
+  <meta property="og:description" content="A free web resource for Physics students." />
+  <meta property="og:image" content="https://pauld0051.github.io/physcis-code/assets/images/logo-main.png" />
 </head>
 
 <body>
@@ -29,13 +29,7 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button 
-      class="navbar-toggler" 
-      type="button" data-toggle="collapse" 
-      data-target="#navbarNav" 
-      aria-controls="navbarNav" 
-      aria-expanded="false" 
-      aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -43,13 +37,13 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-           <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link nav-text" href="help.html">Help <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
           </li>
-           <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
           </li>
           <li class="nav-item">
@@ -62,12 +56,12 @@
       </div>
     </nav>
   </header>
-<section>
-<h2 class="align-center pt-4 mt-4">Whoa there! You've come right into a dilemma zone!</h2>
-<p class="align-center"><img src="assets/images/hazard.png" alt="Hazard sign" class="hazard-sign img-fluid"></p>
-<h2 class="align-center">But we have your options covered. </h2>
-<p class="align-center pb-5 mb-5"><a href="index.html"><button class="btn-lg btn-primary"><i class="fas fa-caravan"></i> Take me home</button></a></p>
-</section>
+  <section>
+    <h2 class="align-center pt-4 mt-4">Whoa there! You've come right into a dilemma zone!</h2>
+    <p class="align-center"><img src="assets/images/hazard.png" alt="Hazard sign" class="hazard-sign img-fluid"></p>
+    <h2 class="align-center">But we have your options covered. </h2>
+    <p class="align-center pb-5 mb-5"><a href="index.html"><button class="btn-lg btn-primary"><i class="fas fa-caravan"></i> Take me home</button></a></p>
+  </section>
 
 
   <!-- Footer -->
@@ -115,16 +109,10 @@
 
     <!-- Copyright and Facebook share-->
     <div class="container text-center">
-      <div 
-   class="fb-share-button" 
-   data-href="https://pauld0051.github.io/physics-code/index.html" 
-   data-layout="button" 
-   data-size="large">
-   <a target="_blank" 
-   href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
-   class="fb-xfbml-parse-ignore">Share</a></div>
+      <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
-    
+
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
       <a href="privacy.html" target="_blank">Privacy Policy</a><br>
@@ -141,6 +129,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="HYRkFRRQ"></script>
-  </body>
+</body>
 
 </html>
