--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!--Link to custom style sheet-->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-   
+
   <title>Physics Code</title>
 </head>
 
@@ -24,13 +24,7 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button 
-      class="navbar-toggler" 
-      type="button" data-toggle="collapse" 
-      data-target="#navbarNav" 
-      aria-controls="navbarNav" 
-      aria-expanded="false" 
-      aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -44,7 +38,7 @@
           <li class="nav-item">
             <a class="nav-link nav-text" href="game.html">Game</a>
           </li>
-           <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link nav-text" href="test_yourself.html">Test yourself</a>
           </li>
           <li class="nav-item active">
@@ -57,60 +51,60 @@
       </div>
     </nav>
   </header>
- <section class="container">
-      <div class="row">
+  <section class="container">
+    <div class="row">
       <div class="col-12  title-div">
-      <div class="container heading-background heading-padding heading-margin-top">
-      <h1>Contact Us <i class="fas fa-envelope-open"></i></h1>
-      <p class="head-text">Feel free to drop us an email and tell us about the type of calculators you'd like to see appear on our site. Just fill out
-      the form below.</p>
-      <p class="head-text">We're set up to accomodate multiple calculators for various physics principles and while we're just starting out, 
-      you may have some ideas that you'd like us to work on for the next calculator.</p>
-      <p class="head-text my-0">Our goal at Physics Code is to keep all our calculators free and set up in a logical order for your convenience. We use large cards and  
-      symbols to help highlight the variable required. We look forward to helping you through your physics courses at school and university.</p>
+        <div class="container heading-background heading-padding heading-margin-top">
+          <h1>Contact Us <i class="fas fa-envelope-open"></i></h1>
+          <p class="head-text">Feel free to drop us an email and tell us about the type of calculators you'd like to see appear on our site. Just fill out
+            the form below.</p>
+          <p class="head-text">We're set up to accomodate multiple calculators for various physics principles and while we're just starting out,
+            you may have some ideas that you'd like us to work on for the next calculator.</p>
+          <p class="head-text my-0">Our goal at Physics Code is to keep all our calculators free and set up in a logical order for your convenience. We use large cards and
+            symbols to help highlight the variable required. We look forward to helping you through your physics courses at school and university.</p>
+        </div>
       </div>
     </div>
-    </div>
   </section>
-   <section class="container">
+  <section class="container">
 
-      <div class="row">
-        <div class="col-12 title-div">
+    <div class="row">
+      <div class="col-12 title-div">
         <div class="container heading-background heading-padding heading-margin">
           <h2>Send us a message</h2>
           <p class="card-text">
             Let us know what type of improvements or calculators you'd like to see in our next release of Physics Code.
           </p>
         </div>
-        </div>
       </div>
-      <form id="user_request" method="post">
+    </div>
+    <form id="user_request" method="post">
       <div class="row">
         <!-- Email Form-->
         <div class="col-12 content-div">
-<div class="form-group">
-    <label for="intputName">Your name</label>
-    <input type="text" class="form-control" name="from_name" id="inputName" placeholder="Enter your name" required>
-    <label for="intputEmailAddress">Email address</label>
-    <input type="email" class="form-control" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
-    <small id="emailHelp">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="message">Message</label>
-    <textarea rows="10" name="calculator_request" class="form-control" id="userRequest" placeholder="Input your suggestions" required></textarea>
-  </div>
-  
-  <div class="row">
-  <div class="col-12 title-div text-center">
-  <button class="btn btn-success btn-green btn-rounded btn-lg btn--padding"><i class="fas fa-paper-plane"></i> Submit</button>
-  </div>
-  </div>
+          <div class="form-group">
+            <label for="intputName">Your name</label>
+            <input type="text" class="form-control" name="from_name" id="inputName" placeholder="Enter your name" required>
+            <label for="intputEmailAddress">Email address</label>
+            <input type="email" class="form-control" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
+            <small id="emailHelp">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea rows="10" name="calculator_request" class="form-control" id="userRequest" placeholder="Input your suggestions" required></textarea>
+          </div>
+
+          <div class="row">
+            <div class="col-12 title-div text-center">
+              <button class="btn btn-success btn-green btn-rounded btn-lg btn--padding"><i class="fas fa-paper-plane"></i> Submit</button>
+            </div>
+          </div>
         </div>
       </div>
-      </form>
+    </form>
 
-   </section>
- <!-- Footer -->
+  </section>
+  <!-- Footer -->
   <footer class="page-footer font-small darken-3">
 
     <!-- Footer Elements -->
@@ -155,16 +149,10 @@
 
     <!-- Copyright and Facebook share -->
     <div class="container text-center">
-    <div 
-   class="fb-share-button" 
-   data-href="https://pauld0051.github.io/physics-code/index.html" 
-   data-layout="button" 
-   data-size="large">
-   <a target="_blank" 
-   href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
-   class="fb-xfbml-parse-ignore">Share</a></div>
+      <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
-    
+
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
       <a href="privacy.html" target="_blank">Privacy Policy</a><br>
@@ -181,10 +169,10 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
   <script type="text/javascript">
-   (function(){
+    (function() {
       emailjs.init("user_4M0aY6Qk6YuN226ZoNGhW");
-   })();
-</script>
+    })();
+  </script>
   <script src="assets/scripts/sendemail.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="HYRkFRRQ"></script>
